# coding=utf-8

# SPDX-FileCopyrightText: 2016-2022 EasyCoding Team
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "hudman"
version = "8.0.0"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
dependencies = [
    "defusedxml>=0.7.0",
    "requests>=2.22.0"
]
authors = [
    { name = "Vitaly Zaitsev", email="vitaly@easycoding.org" }
]
description = "HUD Manager is a simple tool for creating a local HUD mirror"
keywords = [
    "hud",
    "hud-database",
    "hud-manager",
    "manager",
    "mirror",
    "tf2",
    "tf2-hud",
    "tool",
    "utility"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/xvitaly/hudman"
documentation = "https://github.com/xvitaly/hudman/blob/master/docs/README.md"
repository = "https://github.com/xvitaly/hudman"

[project.scripts]
hudman = "hudman.app.run:main"

[project.optional-dependencies]
deploy = [
    "pyinstaller>=5.7.0"
]
test = [
    "tox>=3.27.0"
]

[build-system]
requires = [
    "setuptools>=62.0.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"
